Added search bar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="topnav" id="myTopnav">
@@ -25,6 +31,14 @@
       <a href="#about" class="link"
         ><i class="fa-solid fa-circle-info"></i> About</a
       >
+      <div class="search-container">
+        <form>
+          <input type="text" placeholder="Search..." />
+          <button type="submit">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
+        </form>
+      </div>
       <a href="#about" class="link split"
         >Help <i class="fa-solid fa-question"></i
       ></a>
